--- a/src/app/indice/indice.component.css
+++ b/src/app/indice/indice.component.css
@@ -21,7 +21,7 @@
  }
 
 .gastos {
- border: 10px, solid black;
+ /* border: 10px, solid black; */
  margin-top: 10px;
   margin-right: 10px;
   margin-left: 10px;
