--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+h2{
+  font-family: Roboto;
+  font-weight: bold;
+  /* font-weight: 300!important; */
+  padding-top: 35px;
+  font-size: 25px !important;
+  color: red;
+}
 
   .fa {
     padding: 5px;
