--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,18 +1,45 @@
 <header class="container-center">
+<!--
+  <nav class="navbar fixed-top navbar-light bg-light">
+  <a class="logo" routerLink="/">
+    <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+  </a>
+
+  <a class="text-center" id="logo">
+    <img src="./assets/img/LogoOCM.png" class="img-fluid" alt="Logo OCM">
+  </a>
+
+  <ul class="nav justify-content-end align-items-center">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/about">About</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" (click)="onUserProfileClick()">User Profile</a>
+    </li>
+
+  </ul>
+<br>
+</nav> -->
+
+
+
 
   <div class="text-center" id="logo">
+    <a class="home" routerLink="/">
+    <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+  </a>
     <img src="./assets/img/LogoOCM.png" class="img-fluid" alt="Logo OCM">
   </div>
-  <br>
 
-  <div class="text-center">
+
+  <!-- <div class="text-center">
     <li routerLinkActive="Active" class="">
       <a routerLink="home" class="text center">Inicio</a>
     </li>
-  </div>
+  </div> -->
 
   <div>
-    <hr>
       <h4 class="text-center" id="titulo"> Datos del estado de ejecución presupuesto 2019 al 3 de julio de 2019.</h4>
     </div>
 
