--- a/src/app/gastos/gastos-por-economico/gastos-por-economico.component.html
+++ b/src/app/gastos/gastos-por-economico/gastos-por-economico.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <h2>Selecciona el económico del que quieres obtener infomación:</h2>
+<div class="container-fluid">
+  <div class="row justify-content-center text-center">
+    <h2 id="tituloEconomico">Selecciona el económico del que quieres obtener infomación:</h2>
   </div>
   <div class="row justify-content-center" id="vizContainerEconomicos"></div>
 </div>
