--- a/src/app/gastos/gastos-por-programa/gastos-por-programa.component.html
+++ b/src/app/gastos/gastos-por-programa/gastos-por-programa.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row justify-content-center">
-     <h2>Selecciona el programa o programas de los que quieres obtener infomación, señalandolos en el menu lateral.</h2>
+  <div class="row justify-content-center text-center" >
+     <h2 id="tituloPrograma">Selecciona el programa del que quieres obtener infomación.</h2>
   </div>
   <div class="row justify-content-center" id="vizContainerGastos"></div>
 </div>
