--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,28 +1,29 @@
 <footer>
   <div class="row">
-      <div class="col-2"></div>
+      <div class="col-1"></div>
 
-    <div class="col-3 justify-content-start">
-      <p>
+    <div class="col-4 justify-content-start">
+      <p id="textoFooter">
         <span>© </span>
-        <span>{{ anio }} OCM Jerez. Ver 1.0.4</span>
+        <span>{{ anio }} OCM Jerez. Ver 1.0.6</span>
+        <span> &nbsp; {{ screenSize }}{{ w }}</span>
       </p>
     </div>
 
-    <div class="col-2 justify-content-center">
+    <div class="col-3 justify-content-center">
       <a href="https://www.facebook.com/OcmJerez/" class="fa fa-facebook" target="_blank" rel="nofollow"></a>
       <a href="https://twitter.com/ocmjerez" class="fa fa-twitter" target="_blank" rel="nofollow"></a>
     </div>
 
     <div class="col-3 justify-content-end">
-      <p>
+      <p id="textoFooter">
         <span>Email: </span>
         <span>
           <a href="mailto:info@ocmjerez.org">info@ocmjerez.org</a>
         </span>
       </p>
     </div>
-    <div class="col-2"></div>
+    <div class="col-1"></div>
   </div>
   </footer>
 
