Detecta tamaño de pantalla al rotar telefono.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,7 +6,7 @@
       <p id="textoFooter">
         <span>© </span>
         <span>{{ anio }} OCM Jerez. Ver 1.0.6</span>
-        <span> &nbsp; {{ screenSize }}{{ w }}</span>
+        <span> &nbsp; {{ getScreenSizeService.userScreenSize }}{{ w }}</span>
       </p>
     </div>
 
@@ -25,5 +25,5 @@
     </div>
     <div class="col-1"></div>
   </div>
-  </footer>
+</footer>
 
