--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,8 +1,6 @@
-
-.home {
-  /* align-self: flex-start */
+#home{
+  font-size: 48px;
 }
-
 
 #logo {
   margin-top: 10px;
@@ -21,6 +19,11 @@
 /* --------------------------------------------------------------------- */
 /* https://lenguajecss.com/p/css/propiedades/responsive-design */
 @media screen and (max-width: 640px) {
+
+  #home{
+    font-size: 16px;
+  }
+
 
   #logo {
     margin-top: 2px;
