--- a/src/app/indice/indice.component.css
+++ b/src/app/indice/indice.component.css
@@ -1,3 +1,5 @@
+/* https://www.w3schools.com/cssref/css_selectors.asp */
+
 #ingresos, #gastos {
   font-weight: 700 !important;
   margin-top: 10px;
@@ -22,14 +24,15 @@
 
 .gastos {
  /* border: 10px, solid black; */
- margin-top: 10px;
+  margin-top: 10px;
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 10px;
- display: grid;
+  display: grid;
   grid-gap: 2rem;
   /* grid-template-columns: 20% 30% 30% 20%;
   grid-template-rows: 240px; */
+  /* https://www.w3schools.com/bootstrap4/bootstrap_grid_system.asp */
   /* https://www.udemy.com/css-grid-y-flexbox-la-guia-definitiva-crea-10-proyectos/learn/v4/t/lecture/10276668?start=0 */
   /* grid area */
   /* Grid: row row / columns colums... */
@@ -38,47 +41,9 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 400px) {
-  .gastos {
-    border: 10px, solid black;
-    margin-top: 10px;
-     margin-right: 10px;
-     margin-left: 10px;
-     margin-bottom: 10px;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: 20% 30% 30% 20%;
-    grid-template-rows: 100%;
-
-    justify-content: center;
-   }
-
-   .ingresos {
-    border: 10px, solid black;
-    margin-top: 10px;
-     margin-right: 10px;
-     margin-left: 10px;
-     margin-bottom: 10px;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100%;
-    justify-content: center;
-   }
-
-   #ingresos, #gastos {
-    font-weight: 700 !important;
-    margin-top: 2px;
-    color: #ca3542;
-    font-family: var(--fuente-principal);
-    font-size: 16px;
-    /* text-shadow: 4px 4px 4px #aaa; */
-  }
-}
-
 img{
-width: 100%;
-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .h1, .h2, .h3, .h4, body, h1, h2, h3, h4, h5, h6 {
@@ -109,15 +74,8 @@ p {
   font-weight: 300;
 }
 
-.card-title{
-  font-weight: 700 !important;
-  margin-top: 10px;
-  color: #3c4858;
-  font-family: var(--fuente-principal);
-  font-size: 48px;
-  text-shadow: 4px 4px 4px #aaa;
-}
-
+/* Card --------------------------------------------------------------------- */
+/* https://www.w3schools.com/bootstrap4/bootstrap_cards.asp */
 .card {
   border: 0;
   margin-bottom: 3px;
@@ -127,6 +85,16 @@ p {
   background: #fff;
   width: 100%;
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.card-title{
+  font-weight: 700 !important;
+  margin-top: 10px;
+  color: #3c4858;
+  font-family: var(--fuente-principal);
+  font-size: 48px;
+  text-shadow: 4px 4px 4px #aaa;
+  text-align: center;
 }
 
 .card.card-profile{
@@ -154,4 +122,45 @@ p {
   font-weight: 700;
   font-family: var(--fuente-principal);;
 }
+/* End Card --------------------------------------------------------------------- */
 
+
+/* -----------------------------------------------------------------------------------------------*/
+@media screen and (max-width: 400px) {
+  .gastos {
+    border: 10px, solid black;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: 20% 30% 30% 20%;
+    grid-template-rows: 100%;
+
+    justify-content: center;
+   }
+
+   .ingresos {
+    border: 10px, solid black;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100%;
+    justify-content: center;
+   }
+
+   #ingresos, #gastos {
+    font-weight: 700 !important;
+    margin-top: 2px;
+    color: #ca3542;
+    font-family: var(--fuente-principal);
+    font-size: 16px;
+    /* text-shadow: 4px 4px 4px #aaa; */
+  }
+}
+/* -----------------------------------------------------------------------------------------------*/
