Antes de añadir ingresos

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,5 +11,5 @@
 </div>
 
  <div>
-      <h4 class="text-center" id="titulo"> Datos del estado de ejecución presupuesto 2019 al 7 de agosto de 2019.</h4>
+      <h4 class="text-center" id="titulo"> Datos del estado de ejecución presupuesto 2019 al 2 de septiembre de 2019.</h4>
  </div>
