--- a/src/app/indice/indice.component.html
+++ b/src/app/indice/indice.component.html
@@ -1,3 +1,16 @@
+<h3 class="text-center" id="ingresos">Ingresos.</h3>
+<div class="ingresos">
+  <div></div>
+  <div class="card card-profile">
+    <div class="card-header card-header-image">
+      <a routerLink="/IngresosPorEconomico">
+        <img class="img" src="assets/img/168-pie-chart-2.png" />
+      </a>
+    </div>
+    <div><h4 class="card-title">Información por económico</h4></div>
+  </div>
+</div>
+
   <hr />
   <h3 class="text-center font-weight-bold" id="gastos">Gastos.</h3>
   <div class="gastos">
