Mejoro centrado botones y posicion footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="contenedor">
   <app-header></app-header>
-  <section class="">
+  <section class="centrarSection">
       <router-outlet></router-outlet>
   </section>
   <app-footer></app-footer>
