--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-1"></div>
 
-    <div class="col-4 justify-content-start">
+    <div class="col-4 d-flex justify-content-start">
       <p id="textoFooter">
         <span>© </span>
         <span>{{ anio }} OCM Jerez. Ver 1.0.6</span>
@@ -10,12 +10,12 @@
       </p>
     </div>
 
-    <div class="col-3 justify-content-center">
+    <div class="col-3 d-flex justify-content-center">
       <a href="https://www.facebook.com/OcmJerez/" class="fa fa-facebook" target="_blank" rel="nofollow"></a>
       <a href="https://twitter.com/ocmjerez" class="fa fa-twitter" target="_blank" rel="nofollow"></a>
     </div>
 
-    <div class="col-3 justify-content-end">
+    <div class="col-3 d-flex justify-content-end">
       <p id="textoFooter">
         <span>Email: </span>
         <span>
