--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="contenedor">
   <app-header></app-header>
-  <section class="centrarSection">
+  <main>
       <router-outlet></router-outlet>
-  </section>
+  </main>
   <app-footer></app-footer>
 </div>
