--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,6 +1,6 @@
 footer{
-margin-top: 40px;
-margin-left: 40px;
+margin-top: 20px;
+/* margin-left: 40px; */
 /* /* position: absolute; */
 /* bottom: 0; */
 }
@@ -16,10 +16,11 @@ margin-left: 40px;
   -moz-border-radius: 191px 191px 191px 191px;
   -webkit-border-radius: 191px 191px 191px 191px;
   border: 0px solid #000000;
+  opacity: 0.7;
 }
 
 .fa:hover {
-    opacity: 0.7;
+    opacity: 1;
 }
 
 .fa-facebook {
@@ -55,7 +56,7 @@ margin-left: 40px;
       width: 25px;
       text-align: center;
       text-decoration: none;
-      /* margin: 5px 2px; */
+      margin: 5px 2px;
       border-radius: 191px 191px 191px 191px;
       -moz-border-radius: 191px 191px 191px 191px;
       -webkit-border-radius: 191px 191px 191px 191px;
