--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="row">
       <div class="col-1"></div>
 
-    <div class="col-4 d-flex justify-content-start">
+    <div class="col-3 d-flex justify-content-start">
       <p id="textoFooter">
         <span>© </span>
         <span>{{ anio }} OCM Jerez. Ver 1.0.6</span>
@@ -10,19 +10,22 @@
       </p>
     </div>
 
-    <div class="col-3 d-flex justify-content-center">
+    <div class="col-4 d-flex align-items-center justify-content-center">
       <a href="https://www.facebook.com/OcmJerez/" class="fa fa-facebook" target="_blank" rel="nofollow"></a>
       <a href="https://twitter.com/ocmjerez" class="fa fa-twitter" target="_blank" rel="nofollow"></a>
     </div>
 
-      <p id="textoFooter">
+    <div class="col-3 d-flex justify-content-right">
+    <p id="textoFooter">
         <span>Email: </span>
         <span>
           <a href="mailto:info@ocmjerez.org">info@ocmjerez.org</a>
         </span>
       </p>
+      </div>
+      <div class="col-1"></div>
     </div>
-    <div class="col-1"></div>
+
 
 </footer>
 
