--- a/src/app/gastos/gastos-por-programa/gastos-por-programa.component.css
+++ b/src/app/gastos/gastos-por-programa/gastos-por-programa.component.css
@@ -9,6 +9,10 @@
       text-align: center;
     }
 
+    #vizContainerGastos{
+      height: 80vh;
+    }
+
 /* --------------------------------------------------------------------- */
 /* https://lenguajecss.com/p/css/propiedades/responsive-design */
 @media screen and (max-width: 640px) {
