--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,8 +4,15 @@
 
     <div class="col-3 d-flex justify-content-start">
       <p id="textoFooter">
+          <img
+          src="https://mamjerez.fra1.digitaloceanspaces.com/Icono%20OCM.png"
+          width="30"
+          height="30"
+          alt="logo"
+          class="align-bottom"
+        />
         <span>© </span>
-        <span>{{ anio }} OCM Jerez. Ver 1.0.6</span>
+        <span>{{ anio }} OCM Jerez. Ver 1.0.7</span>
         <span> &nbsp; {{ getScreenSizeService.userScreenSize }}{{ w }}</span>
       </p>
     </div>
