--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,5 +1,18 @@
-#home{
-  font-size: 48px;
+.navBarOCM{
+  height:50px;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.homeOCM{
+  font-size: 32px;
+  color: white;
+  margin-right: 40px;
+}
+
+.textoLogo{
+  margin-left:10px;
 }
 
 #logo {
@@ -9,12 +22,12 @@
 #titulo {
   font-weight: 700 !important;
   margin-top: 20px;
+  margin-left: 20px;
   color: #3c4858;
   font-family: var(--fuente-principal);
   font-size: 28px;
   text-shadow: 4px 4px 4px #aaa;
 }
-
 
 /* --------------------------------------------------------------------- */
 /* https://lenguajecss.com/p/css/propiedades/responsive-design */
@@ -28,6 +41,10 @@
     margin-top: 2px;
     width: 173px;
     height: 37px;
+    }
+    .textoLogo{
+      margin-left:2px;
+      font-size: 10px;
     }
 
     #titulo {
