--- a/src/app/gastos/gastos-por-programa/gastos-por-programa.component.html
+++ b/src/app/gastos/gastos-por-programa/gastos-por-programa.component.html
@@ -1,7 +1,2 @@
-<div class="container-fluid" id="vizContainerGastos">
-  <!-- <div class="row justify-content-center text-center" >
-     <h2 id="tituloPrograma">Selecciona el programa del que quieres obtener infomación.</h2>
-  </div> -->
-  <!-- <div class="row justify-content-center" id="vizContainerGastos"></div> -->
-</div>
+<div class="container-fluid" id="vizContainerTableau"> </div>
 
