--- a/src/app/indice/indice.component.html
+++ b/src/app/indice/indice.component.html
@@ -1,8 +1,8 @@
-<h3 class="text-center" id="ingresos">Ingresos.</h3>
-<div class="ingresos">
-  <div></div>
-  <div class="card card-profile">
-    <div class="card-header card-header-image">
+<div class="divIndice">
+<h3 class="rowTexto">Ingresos.</h3>
+<div class="rowStyle">
+  <div class="card">
+    <div class="cardHeaderImage">
       <a routerLink="/IngresosPorEconomico">
         <img class="img" src="assets/img/168-pie-chart-2.png" />
       </a>
@@ -12,11 +12,10 @@
 </div>
 
   <hr />
-  <h3 class="text-center font-weight-bold" id="gastos">Gastos.</h3>
-  <div class="gastos">
-    <div></div>
-    <div class="card card-profile">
-      <div class="card-header card-header-image">
+  <h3 class="rowTexto">Gastos.</h3>
+  <div class="rowStyle">
+    <div class="card">
+      <div class="cardHeaderImage">
         <a routerLink="/GastosPorPrograma">
           <img class="img" src="assets/img/263-network-1.svg" />
         </a>
@@ -24,17 +23,14 @@
       <h4 class="card-title">Información por programa</h4>
     </div>
 
-    <div class="card card-profile">
-      <div class="card-header card-header-image">
+    <div class="card">
+      <div class="cardHeaderImage">
         <a routerLink="/GastosPorEconomico">
           <img class="img" src="assets/img/031-laptop-30.svg" />
         </a>
       </div>
       <h4 class="card-title">Información por económico</h4>
     </div>
-    <div></div>
   </div>
-
-
-
+</div>
 
