--- a/src/app/ingresos/ingresos-por-economico/ingresos-por-economico.component.html
+++ b/src/app/ingresos/ingresos-por-economico/ingresos-por-economico.component.html
@@ -1,19 +1,2 @@
-<body>
-  <div class="container-fluid">
-    <h2>Ingresos</h2>
-    <!-- <div class="row justify-content-center">
-      <h2>Selecciona el económico de ingresos del que quieres obtener infomación:</h2>
-    </div>
-
-    <div class="row justify-content-center">
-      <select style="width: 450px;" class="chosen-select" id="chosen1">
-        <option value="0">Pulsa para seleccionar un económico.</option>
-        <option *ngFor="let dato of datos"> {{ dato }} </option>
-      </select>
-    </div> -->
-
-    <div class="row justify-content-center" id="vizContainerEconomicos"></div>
-
-  </div>
-</body>
-
+<h2>Ingresos</h2>
+<div class="container-fluid" id="vizContainerTableau"> </div>
