--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,7 +10,9 @@
     <div class="col-2"></div>
 </div> -->
 
+
 <nav class="navbar navbar-dark bg-primary navBarOCM">
+    <!-- <nav class="navBarOCM"> -->
     <div class="p-2 w-90">
       <a class="navbar-brand" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 400 400"
