--- a/src/app/gastos/gastos-por-economico/gastos-por-economico.component.html
+++ b/src/app/gastos/gastos-por-economico/gastos-por-economico.component.html
@@ -1,7 +1,1 @@
-<div class="container-fluid">
-  <!-- <div class="row justify-content-center text-center">
-    <h2 id="tituloEconomico">Selecciona el económico del que quieres obtener infomación:</h2>
-  </div> -->
-  <div class="row justify-content-center" id="vizContainerEconomicos"></div>
-</div>
-
+<div class="container-fluid" id="vizContainerTableau"> </div>
