--- a/src/app/indice/indice.component.html
+++ b/src/app/indice/indice.component.html
@@ -16,7 +16,7 @@
     <div class="card">
       <div class="cardHeaderImage">
         <a routerLink="/GastosPorPrograma">
-          <img class="img" src="assets/img/263-network-1.svg" />
+          <img class="img" src="assets/img/GastoPorPrograma.png" />
         </a>
       </div>
       <h4 class="card-title">Información por programa</h4>
@@ -25,7 +25,7 @@
     <div class="card">
       <div class="cardHeaderImage">
         <a routerLink="/GastosPorEconomico">
-          <img class="img" src="assets/img/031-laptop-30.svg" />
+          <img class="img" src="assets/img/GastoPorEconomico.png" />
         </a>
       </div>
       <h4 class="card-title">Información por económico</h4>
